2009-10-16  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c
	(tny_camel_store_account_get_folders_default): reference the
	CamelStore before unrefing the old one

2009-10-15  Jose Dapena Paz  <jdapena@igalia.com>

	* Drop from repository generated files config.h.in,
	libtinymail-camel/camel-lite/config.h.in and po/Makefile.in.in

	* Reimplemented gnome keyring password dialog to use
	just plain gtk and drop usage of GnomePasswordDialog
	which is deprecated (fix #590753).

	* Removed pending includes and dependencies on
	libgnomeui (in configure.ac too) (fix #590753).

	* libtinymailui-gnome-keyring/tny-gnome-keyring-password-getter.c:
	don't access directly content area if we use G_SEAL enabled gtk

	* libtinymail-camel/camel-lite/configure.ac: add also support
	for silent rules in automake 1.11

2009-10-15 Javier Jardón Cabezas <javierjc1982@gmail.com>

	Reviewed by: Jose Dapena Paz  <jdapena@igalia.com>

	* configure.ac: Support silent build rules, requires at least automake-1.11.
	Disable by either passing --disable-silent-rules to configure or
	passing V=1 to make.

	* Implementation of TnyStream based in GIO

	* Use GIO based streams instead of vfs based streams
	in tinymail GTK.

	* Remove includes requiring vfs streams wherever they
	were not needed.

2009-10-15  Carl Simonson <simonsonc@gmail.com>

	Committed by: Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-send-queue.h (_TnySendQueueIface): removed
	superfluous user_data argument in signal definitions

2009-10-14  Carl Simonson <simonsonc@gmail.com>

	Reviewed by: Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-account.c (tny_account_base_init):
	"connection-status-changed" second argument must be of
	TnyConnectionStatus enum type.
	* libtinymail/tny-combined-account.c
	(tny_combined_account_class_init): register the private in the
	class

2009-10-14  Javier Jardon  <javierjc1982@gmail.com>
