@@ -1,3 +1,14 @@
+2009-10-16  Javier Jardón Cabezas <javierjc1982@gmail.com>
+
+	Reviewed by: Jose Dapena Paz  <jdapena@igalia.com>
+
+	* libtinymail-camel/camel-lite/camel/camel-tcp-stream.h,
+	libtinymail-camel/camel-lite/libedataserver/e-data-server-util.h,
+	libtinymail-maemo/tny-maemo-conic-dummy-device.c,
+	libtinymailui-gtk/tny-gtk-header-list-model.h,
+	tests/functional/account-refresh.c: use single GTK and Glib
+	includes
+
 2009-10-16  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-store-account.c
